(probable) fix for Bug #27974: PHP Arrays are not mapped to VARIANTs.